--- a/aboutme.html
+++ b/aboutme.html
@@ -20,8 +20,8 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="aboutme.html" class="active">Who I am</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="aboutme.html" class="active">About Me</a></li>
+						<!-- <li><a href="elements.html">Elements</a></li> -->
 					</ul>
 				</nav>
 			</header>
@@ -32,9 +32,9 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">AFLOW Webpage Redesign (COMING SOON!)</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Stay tuned! This page will soon be filled with more details about my summer 2018 internship at Duke University!</p>
+							<h1 class="major">About Me</h1>
+							<span class="image fit"><img src="images/jp.jpg" alt="" /></span>
+							<p>You will learn more about me soon enough!</p>
 							<p>//</p>
 						</div>
 					</section>
