--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>103 N. University St.<br />
+											<span>108 S River Rd. Apt #320<br />
 											West Lafayette, IN 47906<br />
 											USA</span>
 										</li>
