--- a/project1.html
+++ b/project1.html
@@ -32,10 +32,37 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">AFLOW Webpage Redesign (COMING SOON!)</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Stay tuned! This page will soon be filled with more details about my summer 2018 internship at Duke University!</p>
-							<p>//</p>
+							<h1 class="major">AFLOW Webpage Redesign</h1>
+							<span class="image fit"><img src="images/aflow.png" alt="" /></span>
+							<h2>Project Duration:</h2>
+							<p>June 2018 - August 2018</p>
+							<h2>Personal Contributions:</h2>
+							<p>Sketching, Wireframing, Prototyping, Coding, Implementation</p>
+							<h2>Tools Used:</h2>
+							<p>HTML/CSS, C++, Sketch, Bash, Vim</p>
+							<h2>Project Summary:</h2>
+							<p>During the summer of 2018, I worked for Dr. Stefano Curtarolo at the Center of Materials Genomics at Duke University. His research group is a mix of 13 Graduate students and Postdoctoral Asssociates, who all contribute to the group's main project, AFLOW.org.  AFLOW is blank blank blank.  I was hired in order to redesign part of AFLOW.org, specifically working on the materials entry page. This page is a part of the Showcase Materials application within AFLOW.  This app allows users to view the specifics of any material found in the database.  On the materials entry page, users can view the composition of the material at a molecular level and learn more about the structures and calculations that pertain to the material.  I worked alongside a web developer in order to improve the information architecure on this page as well as redesign the presentation of all calculations located on this page.</p>
+							<h2>My Approach:</h2>
+							<h3>Research</h3>
+							<p>I began my design process with some secondary research to learn more about the field I was working in and the product I was working with.  My secondary research consisted of reading research papers produced by the research group I was working with. These papers addressed the field of Materials Science and Materials Discovery, common pain points identified in these fields of study, as well as the group's solution to these pain points (AFLOW). Conducting this research allowed me to gain a better understanding of AFLOW, its capabilites through the different web applications it offers, and the users of this site. </p>
+							<h3>Ideation</h3>
+							<p>After secondary research, I jumped right into ideation.  Using Lean UX methods, I worked with a web developer and PM in order to deliver a redesigned materials entry page for aflow.org. I started ideation with a heavy amount of sketching and iteration.  I had an array of different designs that I thought could work for this page.  These designs included integrating tabs, accordian menus, cards, and data tables in order to improve the presentation of all the information on this page. 
+							<!-- PUT SKETCHES HERE!!! -->
+							<h3>Wireframing</h3>
+							<p>I translated these sketches into a number of black and white horizontal prototypes using Sketch and presented these to my PM.</p>
+							<!-- PUT FIRST WIREFRAMES HERE-->
+							<p>From here, I began receiving feedback on my designs, which allowed me narrow down my ideas and work on more vertical prototypes. The most important takeaways from my feedback that drove the rest of my design process included:</p>
+							<ul>
+								<li>No information can be hidden from the user</li>
+								<li>Overall design must be able to handle different types of calculations and numbers</li>
+								<li>Design should be responsive and could be viewed on any device</li>
+							</ul>
+							<!-- PUT MORE IN DEPTH WIREFRAMES HERE -->
+							<h3>Coding + Implementation</h3>
+							<p> // </p>
+							<h2>Final Solution:</h2>
+							<p> // </p>
+
 						</div>
 					</section>
 
