--- a/aboutme.html
+++ b/aboutme.html
@@ -34,8 +34,12 @@
 						<div class="inner">
 							<h1 class="major">About Me</h1>
 							<span class="image fit"><img src="images/jp.jpg" alt="" /></span>
-							<p>You will learn more about me soon enough!</p>
-							<p>//</p>
+							<h2>Who am I?</h2>
+							<p>My name is John Paul Oses, but I prefer to go by JP! I am currently a Senior at Purdue University and have been a part of the User Experience Design program here for the past 3 years.  I was in Computer Science for 1 year until switching to User Experience Design.  However, during my time as a designer I have developed a strong set of technical and communication skills, which has allowed me to act as a bridge between design and developement.</p>
+							<h2>What is my passion?</h2>
+							<p>My passion lies more in visual design and development within the field of UX! I really enjoy being challenged and going into the future I would like to work with more complex design problems and systems and help to not only design concise, modern solutions but develop and implement them as well. </p>
+							<h2>What is your design process like?</h2>
+							<p>I always begin my process with establishing my users and stakeholders.  Once I can identify who is invested in my design, I try to hit ideation as early on as I can.  I am not a fan of your traditional waterfall structure for design because it does not allow room for ideas to grow! Starting ideation early gives your ideas a space for them to flourish in different ways - ways in which are specific to you as a designer! Early ideation also helps to guide areas of potential research.  However, research should be continous throughout your process! Once I have some ideas established, it is time for the iteration process! I like to spend much of my design process sketching and wireframing and receiving continous feedback from users and stakeholders. Continuous feedback is really a key part of my process as it informs much of my design changes and allows me to make constant improvements from one iteration to the next.  This process occurs a final solution is reached, but that is not where I stop my process! I think beyond just design, and move into development as well.  If there is a way I can work with developers to help actually create this solution, you can bet that I will be involved in that process as well! Whatever it takes to make my solution come to life is the route I am going to take, no matter the technical implications.  I am willing to learn what is necessary to see through that my solution is created exactly as I designed it.</p>
 						</div>
 					</section>
 
