--- a/index.html
+++ b/index.html
@@ -63,7 +63,19 @@
 									<h2>String Application</h2>
 									<p>I had the opportunity to work on a group project for Crema during the Spring of 2018.  This project was part of my Experience Studio, where I was a Co-Lead for a team of 7.  Crema had come to us with an idea for a new app, and we explored their idea!  </p>
 									<ul class="actions">
-										<li><a href="project2.html" class="button">Learn more</a></li>
+										<li><a href="" class="button">Coming Soon!</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/SBHP-logo.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>SBHP</h2>
+									<p> I am currently working as a Project Lead for a team of eight through Purdue's User Experience Design Studio. We are currently working with Star Behavioral Health Providers to redesign the provider's side of their website.  More content on this Project will be coming soon!  </p>
+									<ul class="actions">
+										<li><a href="" class="button">Coming Soon!</a></li>
 									</ul>
 								</div>
 							</div>
