--- a/project2.html
+++ b/project2.html
@@ -1,15 +1,13 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>My Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -32,10 +30,324 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">String Application</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>This will soon be filled with documentation of my project with Crema during Spring 2018.  Stay Tuned!</p>
-							<p>//</p>
+							<h1 class="major">ABB REMS Redesign</h1>
+							<span class="image fit"><img src="images/ABB-PXD-LOGO.svg" alt=""></span>
+							<div class="row">
+								<div class="col-6 col-12-medium">
+									<h2>Project Duration:</h2>
+									<p>Aug 2018 - Dec 2018</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-6 col-12-medium">
+									<h2>Team Members:</h2>
+									<ul class="alt">
+										<li>Delaney Rundell (Project Owner)</li>
+										<li>John Paul Oses (Team Lead)</li>
+										<li>Graeme Goss</li>
+										<li>Amy Zhang</li>
+										<li>Sarah Field</li>
+									</ul>
+								</div>
+								<div class="col-6 col-12-medium">
+									<h2>Personal Contributions:</h2>
+									<ul class="alt">
+										<li>Secondary Research</li>
+										<li>Sketching</li>
+										<li>Wireframing</li>
+									</ul>
+								</div>
+							</div>
+							<span class="image fit"><img src="images/abb-team.jpg" alt=""></span>
+							<h2>Project Summary:</h2>
+								<p>ABB’s Industrial Automation Power Generation (IAPG) business primarily serves large utility-scale power generation facilities around the world by providing automation and control systems that safely and efficiency operate electrical power plants providing electricity to billions of people on the planet. As we move forward to a cleaner and lower carbon future, IAPG developed a <strong>Renewable Energy Management System (REMS)</strong> designed to manage small-scale “behind the meter” energy assets including photovoltaics, combined heat and power systems, electricity storage, EV charging, and more. The challenge is that they <strong>do not have intimate knowledge of the end users</strong> in this market and therefore do not know how best to design the UI/UX. Our goals were to <strong>understand the University market segment (customer)</strong>, who the end users may be and what their needs are related to renewable energy management.  Given these needs, <strong>design a UI/UX that satisfies 1-2 primary use cases</strong> while providing a user experience for the end user that meets the expectations of someone in this market segment (e.g. university utility plant operations staff).</p>
+							<h2>Our Approach:</h2>
+							<div class="box alt">
+								<div class="row gtr-uniform">
+									<div class="col-4">
+										<h3>
+										<i class="icon major fas fa-search-plus"></i>
+										Research
+										</h3>
+										<p>Secondary research to learn more about energy management. Primary research to learn more about users, their job roles, and their priorities and pain points.</p>
+									</div>
+									<div class="col-4">
+										<h3>
+										<i class="icon major fas fa-lightbulb"></i>
+										Ideation
+										</h3>
+										<p>Co-design workshop with 2 users. Whiteboarded and sketched possible designs/layouts for renewable energy management system. Identified important content to include on pages.</p>
+									</div>
+									<div class="col-4">
+										<h3>
+										<i class="icon major far fa-edit"></i>
+										Wireframing
+										</h3>
+										<p>Translated sketches into high fidelity wireframes as part of final deliverables.</p>
+									</div>
+								</div> 
+							</div>
+							<div class="row" style="padding-top:20px;">
+								<div class="col-4">
+									<ul class="actions">
+										<li><a href="#research" class="button button scrolly">Learn More</a></li>
+								</div>
+								<div class="col-4">
+									<ul class="actions">
+										<li><a href="#ideation" class="button button scrolly">Learn More</a></li>
+								</div>
+								<div class="col-4">
+									<ul class="actions">
+										<li><a href="#wireframes" class="button button scrolly">Learn More</a></li>
+								</div>
+							</div>
+							<hr id="research">
+							<h3><i class="icon major fas fa-search-plus"></i>
+							Research	
+							</h3>
+							<h4>Secondary Research</h4>
+							<br>
+							<p><u>Goals:</u></p>
+							<ol>
+								<li>Gain a base understanding of energy management and electricity
+								</li>
+								<li>Learn common terms and associations when it comes to energy and energy consumption</li>
+								<li>Compare other examples of products already on market or soon to be on market</li>
+							</ol>	
+							<p>Most of our Secondary Research consisted of looking more into energy, energy consumption, and energy management. We came into this project without a very strong understanding in any of these ideas. Therefore, we needed to start off with strong secondary research to get us well acquainted with the field we were working within. We also did lots of competitive analysis throughout our design process in order to compare ABB’s direction to other industry standards.
+							</p>
+							<p>Our Secondary provided the footing for our group to begin to understand more about this field. With the gained knowledge of industry standards and language we were able to go into our primary research with enough knowledge to be able to speak to experts in the field. Because of this we were able to build a strong repertoire with our users.</p>
+							<h4>Primary Research</h4>
+							<br>
+							<div class="box alt">
+								<div class="row gtr-uniform">
+									<div class="col-4">
+										<h4>
+											<i class="icon major fas fa-users"></i>
+											Interviewed 3 users
+										</h4>
+										<p>Reached out to the Directors of Energy and Utility at both Purdue University and Indiana University and also spoke with the Utility Analyst at Indiana University.</p>
+									</div>
+									<div class="col-4">
+										<h4>
+											<i class="icon major fas fa-bullseye"></i>
+											Interview Goals
+										</h4>
+										<ol>
+											<li>Learn who our users are, their background and current job role, what their priorities and goals are, and what pain points they have
+											</li>
+											<li>Learn how energy is allocated currently and what the university is currently doing with renewables</li>
+										</ol>
+									</div>
+									<div class="col-4">
+										<h4>
+											<i class="icon major far fa-sticky-note"></i></i>
+											Main Takeaway's
+										</h4>
+										<ol>
+											<li>Cost is the most important aspect of users' jobs
+											</li>
+											<li>Systems will differ for people who are managing day-to-day functions vs. overall manager</li>
+											<li>Renewable energy isn't really a priority to universities this point due to cost</li>
+										</ol>		
+									</div>
+								</div>
+							</div>
+							<hr id="ideation">
+							<h3><i class="icon major fas fa-lightbulb"></i>
+							Ideation	
+							</h3>
+							<h4>Co-Design Workshop</h4>
+							<br>
+							<div class="box alt">
+								<div class="row gtr-uniform">
+									<div class="col-4">
+										<h4>
+											<i class="icon major fas fa-bullseye"></i>
+											Workshop Goals
+										</h4>
+										<ol>
+											<li>Have users give their expert opinions on how REMS should be designed
+											</li>
+											<li>Gain insights to help drive ideation phase of design</li>
+										</ol>
+									</div>
+									<div class="col-4">
+										<h4>
+											<i class="icon major fas fa-users"></i>
+											2 Workshop Participants
+										</h4>
+										<p>These participants included one of our interviewees, who is the Energy Manager at Purdue’s Utility Plant Office Facility, and his intern, who works closely with the energy management system that Purdue uses and has intimate knowledge on renewable energy</p>
+									</div>
+									<div class="col-4">
+										<h4>
+											<i class="icon major fas fa-list-ol"></i></i>
+											3 Workshop Activies
+										</h4>
+										<p>Created detailed protocol around 3 main activities that we wanted our participants to work through together</p>		
+									</div>
+								</div>
+							</div>
+							<div class="box alt">
+								<div class="row gtr-uniform">
+									<div class="col-6"><span class="image fit"><img src="images/co-design2.jpg" alt="" /></span>
+									</div>
+									<div class="col-6"><span class="image fit"><img src="images/co-design1.jpg" alt="" /></span></div>	
+								</div>
+							</div>
+							<div class="box alt">
+								<div class="row gtr-uniform">
+									<div class="col-4">
+										<h4>
+											<i class="icon major material-icons">
+											looks_one
+											</i>
+											Activity 1
+										</h4>
+										<h5>"Renewable Affinity Diagramming"</h5>
+										<p><b>Goals:</b></p>
+										<ol>
+											<li>Find out what participants expect to see from a renewable energy management system
+											</li>
+											<li>Gain an understanding of how participants group terms related to renewable energy</li>
+										</ol>
+									</div>
+									<div class="col-4">
+										<h4>
+											<i class="icon major material-icons">
+											looks_two
+											</i>
+											Activity 2
+										</h4>
+										<h5>"Prioritize the Data Viz"</h5>
+										<p><b>Goals:</b></p>
+										<ol>
+											<li>Gain an understanding of stakeholder priorities when it comes to a REMS
+											</li>
+											<li>Find out what participants want to see first when looking at the REMS</li>
+										</ol>
+									</div>
+									<div class="col-4">
+										<h4>
+											<i class="icon major material-icons">
+											looks_3
+											</i>
+											Activity 3
+										</h4>
+										<h5>"Visualize it Yourself"</h5>
+										<p><b>Goals:</b></p>
+										<ol>
+											<li>Get participants to draw any visualizations that we did not provide them in the previous activity
+											</li>
+										</ol>		
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-4">
+									<p><b>Takeaway's from Activity 1:</b></p>
+										<ol>
+											<li>Reports should be data-driven and they have to be designed in a way to easily identify the economics of it
+											</li>
+											<li>With the grid - everything has to be integrated and it’s helpful to see data instantaneously and dynamically
+											</li>
+											<li>A big surprise was that our participant who is highly cost driven, didn’t think about writing “cost” on one of the main sticky notes
+											</li>
+											<li>Important categories included storage, grid, cost comparison, % renewables, dynamic, report/statistics, emissions, integrative, and energy saving
+											</li>
+										</ol>		
+								</div>
+								<div class="col-4">
+									<p><b>Takeaway's from Activity 2:</b></p>
+										<ol>
+											<li>Top down structures are where the user’s mind goes first (helpful to have a general then more specific approach)
+											</li>
+											<li>Having dropdown menus where the user can go further into a specific data function are helpful</li>
+											<li>Too much customization can be bad because it adds unnecessary complexity and is hard to use for multiple levels of users (building managers vs. entire system managers)</li>
+											<li>Graph trends are helpful especially when compared with previous year/month data to show easy comparisons</li>
+											<li>Executive summaries are the most important thing to see and showcase on the main page for easy interpretation of data</li>
+										</ol>	
+									</div>
+								<div class="col-4">
+									<p><b>Takeaway's from Activity 3:</b></p>
+										<ol>
+											<li>Data you want to know from each source (i.e. wind, solar etc) should be clear and show the current conditions
+											</li>
+											<li>One participant listed the things she would want to see which include key data, cost per unit of each sources, how much is coming from each source, and demand curve of trend</li>
+											<li>She also emphasized the importance of making it simple and clear to read and having a button to see each subsystem</li>
+											<li>The other participant put more emphasis on having the data be real-time and automatically updated</li>
+										</ol>	
+								</div>
+
+							</div>
+							<h4>Whiteboarding</h4>
+							<p>In order to kick off the design phase of this project, we looked to our results from our research and co-design in order to inform our design decisions.  We started off by diverging and whiteboarding the layout of the REMS as well as figuring out the content that needed to be included on each page.
+							</p>
+							<div class="box alt">
+								<div class="row gtr-uniform">
+									<div class="col-4">
+										<span class="image fit"><img src="images/whiteboard1.jpg" alt="" /></span>
+									</div>
+									<div class="col-4">
+										<span class="image fit"><img src="images/whiteboard3.jpg" alt="" /></span>
+									</div>
+									<div class="col-4">
+										<span class="image fit"><img src="images/whiteboard2.jpg" alt="" /></span>
+									</div>
+								</div>
+							</div>
+							<h4>Sketching</h4>
+							<p>We then dove into sketching with several 2-3 minute rounds of sketching.  Individually, we started  off with an idea/layout for the REMS, then built upon our sketches with each round.</p>
+							<div class="box alt">
+								<div class="row gtr-uniform">
+									<div class="col-4">
+										<span class="image fit"><img src="images/graeme sketches.jpg" alt="" /></span>
+									</div>
+									<div class="col-4">
+										<span class="image fit"><img src="images/amy sketches.jpg" alt="" /></span>
+									</div>
+									<div class="col-4">
+										<span class="image fit"><img src="images/delaney sketch.jpg" alt="" /></span>
+									</div>
+									<div class="col-4">
+										<span class="image fit"><img src="images/sarah sketches.jpg" alt="" /></span>
+									</div>
+									<div class="col-4">
+										<span class="image fit"><img src="images/jp sketches.jpg" alt="" /></span>
+									</div>
+									<div class="col-4">
+										<span class="image fit"><img src="images/final dashboard sketch.jpg" alt="" /></span>
+									</div>
+								</div>
+							</div>
+							<p>At the end, we came together and consolidated the most important parts of our sketches and transitioned into wireframes.</p>
+							<hr id="wireframes">
+							<h3>
+							<i class="icon major far fa-edit"></i>
+							Wireframing	
+							</h3>
+							<div class="box alt">
+								<div class="row gtr-uniform">
+									<p style="margin-bottom: 0px;">Below are two black and white templates I created using Figma for my team to work off.</p>
+									<div class="col-6"><span class="image fit"><img src="images/Dashboard Dark Mode BW.svg" alt="" /></span>
+									</div>
+									<div class="col-6"><span class="image fit"><img src="images/Dashboard Light Mode BW.svg" alt="" /></span></div>
+									<p>These templates were used as a starting point to create the wireframes you see below. These wireframes repesent different pages within the REMS we redesigned. These pages include site overview, reports, generation, consumption, forecasts and settings.</p>
+									<div class="col-6"><h5>Site Overview Page</h5><span class="image fit"><img src="images/Dashboard.svg" alt="" /></span><blockquote> Allows users to view “quick statistics” of information and current conditions that may be important to them regarding their site. There are three main parts of the site overview: KPI’s, cost tracking, and energy flow.</blockquote></div>
+									<div class="col-6"><h5>Reports Page</h5><span class="image fit"><img src="images/Reports 2.svg" alt="" /></span><blockquote>Allows users to create reports for any type of data for any period of time they would like to see</blockquote></div>
+									<div class="col-6"><h5>Generation Page</h5><span class="image fit"><img src="images/Generation.svg" alt="" /></span><blockquote>Shows the user visualizations showing the amount of energy the site has generated over time.</blockquote></div>
+									<div class="col-6"><h5>Consumption Page</h5><span class="image fit"><img src="images/Consumption.svg" alt="" /></span><blockquote>Consists of 3 visuals showing energy consumption within the user’s site. Allows the user to quickly track how much energy different assets are consuming.</blockquote></div>
+									<div class="col-4"><h5>Energy Overview Page</h5><span class="image fit"><img src="images/Solar Overview.svg" alt="" /></span><blockquote>Dives a little bit deeper into the more specific information pertaining to a particular kind of energy source. In this specific case this page of the wireframe dives deeper into the solar energy data. </blockquote></div>
+									<div class="col-4"><h5>Forecast Page</h5><span class="image fit"><img src="images/forecasts.svg" alt="" /></span><blockquote>Users can see a range of types of data visualization for upcoming months/years. At the top left, users can select a specific timespan to compare and lookup forecasts and can select how many years forward as well as min, max,or standard deviation. Users can also see a list of broken down reports (bottom left) which list price and amount.</blockquote></div>
+									<div class="col-4"><h5>Settings Page</h5><span class="image fit"><img src="images/Settings.svg" alt="" /></span><blockquote>Gives users a customizable portion of what they want to see at the top “quick stats” portion where they can select the KPIs that are most important to them. Users can also choose how they want their data presented (weekly/monthly/or yearly) based on how they want to see the trends.
+										</blockquote></div>
+								</div>
+							</div>
+							<ul class="actions fit">
+								<li><a href="project1.html" class="button icon fa-angle-double-left">Previous Project</a></li>
+								<li><a href="project2.html" class="button icon fa-angle-double-up">Back to Top</a></li>
+								<li><a href="project3.html" class="button icon fa-angle-double-right">Next Project</a></li>
+							</ul>
 						</div>
 					</section>
 
@@ -45,7 +357,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
