--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>John Paul Oses</title>
@@ -11,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	</head>
 	<body class="is-preload">
 
@@ -45,11 +41,11 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/duke.jpg" alt="Summer 2k18" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/duke.png" alt="Summer 2k18" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>AFLOW Webpage Redesign</h2>
-									<p>For the summer of 2018, I worked at Duke University at the Center for Materials Genomics as a Web Design and Development Intern. See what I helped implement!</p>
+									<p>For the summer of 2018, I worked at Duke University at the Center for Materials Genomics. During this summer, I worked with the AFLOW Consortium doing web design and development for part of aflow.org. See what I helped implement!</p>
 									<ul class="actions">
 										<li><a href="project1.html" class="button">Learn more</a></li>
 									</ul>
@@ -57,23 +53,23 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/crema.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/abb.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>String Application</h2>
-									<p>I had the opportunity to work on a group project for Crema during the Spring of 2018.  This project was part of my Experience Studio, where I was a Co-Lead for a team of 7.  Crema had come to us with an idea for a new app, and we explored their idea!  </p>
+									<h2>ABB</h2>
+									<p> During the Fall 2018 semester, I worked on a corporate sponsored project with ABB through Purdue's Experience Design Studio. Leading a team of five, we worked to help deliver insights on designing the UI/UX for an energy management system ABB was creating.</p>
 									<ul class="actions">
-										<li><a href="" class="button">Coming Soon!</a></li>
+										<li><a href="project2.html" class="button">Learn More</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/SBHP-logo.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/crema.gif" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>SBHP</h2>
-									<p> I am currently working as a Project Lead for a team of eight through Purdue's User Experience Design Studio. We are currently working with Star Behavioral Health Providers to redesign the provider's side of their website.  More content on this Project will be coming soon!  </p>
+									<h2>String Application</h2>
+									<p>I had the opportunity to work on a group project sponsored by Crema during the Spring of 2018.  This project was part of my User Experience Design Studio, where I was a Co-Lead for a team of seven.  Crema had come to us with an idea for a new app, and we explored their idea!  </p>
 									<ul class="actions">
 										<li><a href="" class="button">Coming Soon!</a></li>
 									</ul>
@@ -94,6 +90,11 @@
 									<p>One of my most treasured skills. I have held a role in my project groups as the technical savant.  I consider myself proficient in HTML/CSS, with experience using JS, Java, Python and C++.  However, this is only the beginning of this list.  I hope future work/projects will make this list grow!</p>
 								</section>
 								<section>
+									<span class="icon major fa-diamond"></span>
+									<h3>Wireframing and Prototyping</h3>
+									<p>With a strong passion for creating modern, responsive UI's, I have used many tools to aid in visualizing in my designs.  I am most proficient with Sketch and Figma.  I also have extensive experience using the Adobe Creative Suite in order to create final deliverables.</p>
+								</section>
+								<section>
 									<span class="icon major fa-cog"></span>
 									<h3>Project Management</h3>
 									<p>I have worked on multiple projects where I have served as either a Project Lead or a Co-Lead. My experience is mainly in utilizing Lean UX to drive my design process.  However, I also have knowledge of Agile Development methods </p>
@@ -102,11 +103,6 @@
 									<span class="icon major fa-chain"></span>
 									<h3>Collaboration</h3>
 									<p>I am a strong believer that collaborative work creates the finest solutions.  Personally, I love bouncing ideas off peers and getting feedback on my work.  During my time at Purdue, I have worked in many collaborative teams for classes/projects.  Thus, collaboration and small group communication are nothing new to me.</p>
-								</section>
-								<section>
-									<span class="icon major fa-diamond"></span>
-									<h3>Wireframing and Prototyping</h3>
-									<p>With a strong passion for creating modern, responsive UI's, I have used many tools to aid in visualizing in my designs.  I am most proficient with Sketch and Figma.  I also have extensive experience using the Adobe Creative Suite in order to create final deliverables.</p>
 								</section>
 							</div>
 							<ul class="actions">
@@ -158,16 +154,6 @@
 											<h3>Phone</h3>
 											<span>(201) 968-6322</span>
 										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
 									</ul>
 								</section>
 							</div>
@@ -180,7 +166,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
