--- a/project2.html
+++ b/project2.html
@@ -190,9 +190,9 @@
 							</div>
 							<div class="box alt">
 								<div class="row gtr-uniform">
-									<div class="col-6"><span class="image fit"><img src="images/co-design2.jpg" alt="" /></span>
+									<div class="col-6"><span class="image fit"><img src="images/co-design2.JP" alt="" /></span>
 									</div>
-									<div class="col-6"><span class="image fit"><img src="images/co-design1.jpg" alt="" /></span></div>	
+									<div class="col-6"><span class="image fit"><img src="images/co-design1.JPG" alt="" /></span></div>	
 								</div>
 							</div>
 							<div class="box alt">
