--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<h2>String Application</h2>
 									<p>I had the opportunity to work on a group project sponsored by Crema during the Spring of 2018.  This project was part of my User Experience Design Studio, where I was a Co-Lead for a team of seven.  Crema had come to us with an idea for a new app, and we explored their idea!  </p>
 									<ul class="actions">
-										<li><a href="" class="button">Coming Soon!</a></li>
+										<li><a href="project3.html" class="button">Learn More</a></li>
 									</ul>
 								</div>
 							</div>
@@ -166,7 +166,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li>
+						<li>&copy; John Paul Oses</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
