--- a/project2.html
+++ b/project2.html
@@ -58,6 +58,7 @@
 									</ul>
 								</div>
 							</div>
+							
 							<span class="image fit"><img src="images/abb-team.jpg" alt=""></span>
 							<h2>Project Summary:</h2>
 								<p>ABB’s Industrial Automation Power Generation (IAPG) business primarily serves large utility-scale power generation facilities around the world by providing automation and control systems that safely and efficiency operate electrical power plants providing electricity to billions of people on the planet. As we move forward to a cleaner and lower carbon future, IAPG developed a <strong>Renewable Energy Management System (REMS)</strong> designed to manage small-scale “behind the meter” energy assets including photovoltaics, combined heat and power systems, electricity storage, EV charging, and more. The challenge is that they <strong>do not have intimate knowledge of the end users</strong> in this market and therefore do not know how best to design the UI/UX. Our goals were to <strong>understand the University market segment (customer)</strong>, who the end users may be and what their needs are related to renewable energy management.  Given these needs, <strong>design a UI/UX that satisfies 1-2 primary use cases</strong> while providing a user experience for the end user that meets the expectations of someone in this market segment (e.g. university utility plant operations staff).</p>
@@ -357,7 +358,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li>
+						<li>&copy; John Paul Oses</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
